--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-hyperlink-text": "^0.2.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.7.0",
     "react-native-reanimated": "~1.13.0",
